--- a/index.html
+++ b/index.html
@@ -2,14 +2,27 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Portfolio website by Roushan" />
-    <link rel="apple-touch-icon" href="/logo192.png" />
+    
+
+
+
     <link rel="manifest" href="/manifest.json" />
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <title>Roushan-Portfolio</title>
+    <meta name="description" content="Portfolio of Roushan Bhadani, Full-Stack Developer skilled in ReactJS, Java, and UI/UX Design." />
+    <meta name="keywords" content="Roushan Bhadani, ReactJS Developer, Full Stack Developer, Web Developer, UI/UX Designer, Java Developer, Portfolio" />
+    <meta name="author" content="Roushan Bhadani" />
+
+    <link rel="icon" type="image/png" href="/favicon/favicon-96x96.png" sizes="96x96" />
+<link rel="icon" type="image/svg+xml" href="/favicon/favicon.svg" />
+<link rel="shortcut icon" href="/favicon/favicon.ico" />
+<link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png" />
+<link rel="manifest" href="/favicon/site.webmanifest" />
+
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
